--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body bgcolor="lightgreen	">
 	<ASIDE style="float:right;width:200px;">
-	<img src="Naveen pic 1.jpg" width="150" height="200">
+	<img src="1.jpg" width="150" height="200">
 	</aside>
 		<h3>Name:&#160 &#160 &#160 Naveen.<p>
 			Surname:&#160 &#160 &#160 Thalakayala.<p>
